<resources>
    <string name="app_name">ALC 4 Phase1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="app_name2">About ALC</string>
    <string name="app_name3">My Profile</string>
    <string name="track_android">Track:       Android</string>
    <string name="country_nigeria">Country:    Nigeria</string>
    <string name="emial_ketuimevbore_yahoo_com">Emial:    ketuimevbore@yahoo.com</string>
    <string name="phone_number_2347033624441">Phone Number:    +2347033624441</string>
    <string name="slack_username_chris01">Slack Username:    @chris01</string>
    <string name="my_name">Ketu Imevbore</string>
</resources>
