<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="500dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/my_name"
        android:src="@drawable/flowz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider">

        <TextView
            android:id="@+id/textView11"
            style="@style/aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_android" />

        <TextView
            android:id="@+id/textView12"
            style="@style/aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_nigeria" />

        <TextView
            android:id="@+id/textView13"
            style="@style/aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emial_ketuimevbore_yahoo_com" />

        <TextView
            android:id="@+id/textView14"
            style="@style/aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_2347033624441" />

        <TextView
            android:id="@+id/textView15"
            style="@style/aboutme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slack_username_chris01" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        style="@style/dividercolour"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="192dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView16"
        style="@style/aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/my_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>